# lab1

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  check_all_work.txt  conanfile.txt
.github/workflows/: ci.yml
compressor/: CMakeLists.txt
compressor/src/: compressor.cpp
install_test/lib/cmake/libcompressor/: libcompressor-targets-release.cmake  libcompressor-targets.cmake
libcompressor/: CMakeLists.txt
libcompressor/include/libcompressor/: libcompressor.hpp
libcompressor/src/: libcompressor.cpp
libcompressor/tests/: CMakeLists.txt  libcompressortest.cpp
